changes to file locations

--- a/html/contact.html
+++ b/html/contact.html
@@ -4,22 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="My Site">
-    <link rel="preload" as="font" type="font/woff2" crossorigin href="assets/fonts/oswald-v53-latin-regular.woff2">
-    <link rel="preload" as="font" type="font/woff2" crossorigin href="assets/fonts/oswald-v53-latin-500.woff2">
-    <link rel="preload" as="font" type="font/woff2" crossorigin href="assets/fonts/oswald-v53-latin-600.woff2">
-    <link rel="preload" as="font" type="font/woff2" crossorigin href="assets/fonts/oswald-v53-latin-700.woff2">
-    <link rel="preload" as="image" type="image/webp" href="assets/icons/company logo4.webp">
-    <link rel="preload" href="css/critical.css" as="style">
-    <link rel="stylesheet" href="css/critical.css">
-    <link rel="preload" href="css/style.css" as="style">
-    <link rel="stylesheet" href="css/style.css" media="print" onload="this.media='all'">
-    <link rel="preload" href="css/glide.css" as="style">
-    <link rel="stylesheet" href="css/glide.css" media="print" onload="this.media='all'">
-    <script type="module" src="js/glide.min.js" defer></script>
-    <script type="module" src="js/script.js" defer></script>
+    <link rel="preload" as="font" type="font/woff2" crossorigin href="/assets/fonts/oswald-v53-latin-regular.woff2">
+    <link rel="preload" as="font" type="font/woff2" crossorigin href="/assets/fonts/oswald-v53-latin-500.woff2">
+    <link rel="preload" as="font" type="font/woff2" crossorigin href="/assets/fonts/oswald-v53-latin-600.woff2">
+    <link rel="preload" as="font" type="font/woff2" crossorigin href="/assets/fonts/oswald-v53-latin-700.woff2">
+    <link rel="preload" as="image" type="image/webp" href="/assets/icons/company logo4.webp">
+    <link rel="preload" href="/css/critical.css" as="style">
+    <link rel="stylesheet" href="/css/critical.css">
+    <link rel="preload" href="/css/style.css" as="style">
+    <link rel="stylesheet" href="/css/style.css" media="print" onload="this.media='all'">
+    <link rel="preload" href="/css/glide.css" as="style">
+    <link rel="stylesheet" href="/css/glide.css" media="print" onload="this.media='all'">
+    <script type="module" src="/js/glide.min.js" defer></script>
+    <script type="module" src="/js/script.js" defer></script>
     <noscript>
-      <link rel="stylesheet" href="css/style.css">
-      <link rel="stylesheet" href="css/glide.css">
+      <link rel="stylesheet" href="/css/style.css">
+      <link rel="stylesheet" href="/css/glide.css">
     </noscript>
     <title>Algarve WebCraft | Small Business Website Specialist</title>
   </head>
@@ -29,7 +29,7 @@
 
       <div class="header__container">
         <div class="wrapper wrapper--wide wrapper--header">
-          <img src="assets/icons/company logo4.webp" class="company-logo" width="170" height="45" fetchpriority="high" decoding="async" loading="eager" alt="Algarve Webcraft's logo. Landscape scenary of beach-side cliffs on the left, with the business name on the right (Algarve Webcraft) and its slogan below it (Small business website designs.)">
+          <img src="/assets/icons/company logo4.webp" class="company-logo" width="170" height="45" fetchpriority="high" decoding="async" loading="eager" alt="Algarve Webcraft's logo. Landscape scenary of beach-side cliffs on the left, with the business name on the right (Algarve Webcraft) and its slogan below it (Small business website designs.)">
 
           <div class="toggle-hamburger-btn-box">
             <svg id="svg-sun" class="svg-color-preferance hidden" height="32" width="32" viewBox="0 0 512 512">
@@ -89,160 +89,11 @@
     </header>
 
     <main id="main">
-      <section id="pg1-s5-pricing">
-        <div class="wrapper wrapper--mobile-L">
-          <span class="cmp-topper-heading cmp-topper-heading--pg1-s5">Our Pricing</span>
-          <h2 class="cmp-sub-heading cmp-sub-heading--pg1-s5">Affordable Packages for Any Business</h2>
+      
+      <section class="pricing">
 
-          <div class="pricing-card-container">
-            <div class="pricing-card">
-              <h3>Once off</h3>
-
-              <ul role="list">
-                <li>
-                  <p><span class="pricing-card__price-span">Includes - </span>Design And Development</p>
-                  <svg height="15" width="15" viewBox="0 0 36 36" aria-hidden="true">
-                    <path d="M34.459 1.375a2.999 2.999 0 0 0-4.149.884L13.5 28.17l-8.198-7.58a2.999 2.999 0 1 0-4.073 4.405l10.764 9.952s.309.266.452.359a2.999 2.999 0 0 0 4.15-.884L35.343 5.524a2.999 2.999 0 0 0-.884-4.149z"></path>
-                  </svg>
-                </li>
-
-                <li>
-                  <p><span class="pricing-card__price-span">+€15/mo - </span> Hosting</p>
-                  <svg height="15" width="15" viewBox="0 0 36 36" aria-hidden="true">
-                    <path d="M34.459 1.375a2.999 2.999 0 0 0-4.149.884L13.5 28.17l-8.198-7.58a2.999 2.999 0 1 0-4.073 4.405l10.764 9.952s.309.266.452.359a2.999 2.999 0 0 0 4.15-.884L35.343 5.524a2.999 2.999 0 0 0-.884-4.149z"></path>
-                  </svg>
-                </li>
-
-                <li>
-                  <p><span class="pricing-card__price-span">+€20/mo - </span> Unlimited Edits Add-on</p>
-                  <svg height="15" width="15" viewBox="0 0 36 36" aria-hidden="true">
-                    <path d="M34.459 1.375a2.999 2.999 0 0 0-4.149.884L13.5 28.17l-8.198-7.58a2.999 2.999 0 1 0-4.073 4.405l10.764 9.952s.309.266.452.359a2.999 2.999 0 0 0 4.15-.884L35.343 5.524a2.999 2.999 0 0 0-.884-4.149z"></path>
-                  </svg>
-                </li>
-
-                <li>
-                  <p><span class="pricing-card__price-span">+€50 per page - </span> After 5 Pages</p>
-                  <svg height="15" width="15" viewBox="0 0 36 36" aria-hidden="true">
-                    <path d="M34.459 1.375a2.999 2.999 0 0 0-4.149.884L13.5 28.17l-8.198-7.58a2.999 2.999 0 1 0-4.073 4.405l10.764 9.952s.309.266.452.359a2.999 2.999 0 0 0 4.15-.884L35.343 5.524a2.999 2.999 0 0 0-.884-4.149z"></path>
-                  </svg>
-                </li>
-
-                <li>
-                  <p><span class="pricing-card__price-span">+€150 once-off - </span> Blog Add-on</p>
-                  <svg height="15" width="15" viewBox="0 0 36 36" aria-hidden="true">
-                    <path d="M34.459 1.375a2.999 2.999 0 0 0-4.149.884L13.5 28.17l-8.198-7.58a2.999 2.999 0 1 0-4.073 4.405l10.764 9.952s.309.266.452.359a2.999 2.999 0 0 0 4.15-.884L35.343 5.524a2.999 2.999 0 0 0-.884-4.149z"></path>
-                  </svg>
-                </li>
-
-                <li>
-                  <p><span class="pricing-card__price-span">+€20/mo - </span> Social Media Manager</p>
-                  <svg height="15" width="15" viewBox="0 0 36 36" aria-hidden="true">
-                    <path d="M34.459 1.375a2.999 2.999 0 0 0-4.149.884L13.5 28.17l-8.198-7.58a2.999 2.999 0 1 0-4.073 4.405l10.764 9.952s.309.266.452.359a2.999 2.999 0 0 0 4.15-.884L35.343 5.524a2.999 2.999 0 0 0-.884-4.149z"></path>
-                  </svg>
-                </li>
-
-                <li>
-                  <p><span class="pricing-card__price-span">+€0.12c per word - </span> Language Translation</p>
-                  <svg height="15" width="15" viewBox="0 0 36 36" aria-hidden="true">
-                    <path d="M34.459 1.375a2.999 2.999 0 0 0-4.149.884L13.5 28.17l-8.198-7.58a2.999 2.999 0 1 0-4.073 4.405l10.764 9.952s.309.266.452.359a2.999 2.999 0 0 0 4.15-.884L35.343 5.524a2.999 2.999 0 0 0-.884-4.149z"></path>
-                  </svg>
-                </li>
-
-                <li>
-                  <p>24/7 Support</p>
-                  <svg height="17" width="17" viewBox="0 0 16 16" aria-hidden="true">
-                    <path fill="#707070" d="M11.477 3.11a6 6 0 0 0-8.367 8.367l8.367-8.368zm1.414 1.413l-8.368 8.368a6 6 0 0 0 8.367-8.367zM8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0z"></path>
-                  </svg>
-                </li>
-
-                <li>
-                  <p>Lifetime Updates</p>
-                  <svg height="17" width="17" viewBox="0 0 16 16" aria-hidden="true">
-                    <path fill="#707070" d="M11.477 3.11a6 6 0 0 0-8.367 8.367l8.367-8.368zm1.414 1.413l-8.368 8.368a6 6 0 0 0 8.367-8.367zM8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0z"></path>
-                  </svg>
-                </li>
-              </ul>
-
-              <span>€1100</span>
-              <span>+€15/mo Hosting</span>
-              <a class="cmp-main-btn" href="#">Get Started</a>
-            </div>
-
-            <div class="pricing-card">
-              <h3>Monthly</h3>
-
-              <ul role="list">
-                <li>
-                  <p><span class="pricing-card__price-span">Includes - </span>Design And Development</p>
-                  <svg height="15" width="15" viewBox="0 0 36 36" aria-hidden="true">
-                    <path d="M34.459 1.375a2.999 2.999 0 0 0-4.149.884L13.5 28.17l-8.198-7.58a2.999 2.999 0 1 0-4.073 4.405l10.764 9.952s.309.266.452.359a2.999 2.999 0 0 0 4.15-.884L35.343 5.524a2.999 2.999 0 0 0-.884-4.149z"></path>
-                  </svg>
-                </li>
-
-                <li>
-                  <p><span class="pricing-card__price-span">Includes - </span> Hosting</p>
-                  <svg height="15" width="15" viewBox="0 0 36 36" aria-hidden="true">
-                    <path d="M34.459 1.375a2.999 2.999 0 0 0-4.149.884L13.5 28.17l-8.198-7.58a2.999 2.999 0 1 0-4.073 4.405l10.764 9.952s.309.266.452.359a2.999 2.999 0 0 0 4.15-.884L35.343 5.524a2.999 2.999 0 0 0-.884-4.149z"></path>
-                  </svg>
-                </li>
-
-                <li>
-                  <p><span class="pricing-card__price-span">Includes - </span> Unlimited Edits</p>
-                  <svg height="15" width="15" viewBox="0 0 36 36" aria-hidden="true">
-                    <path d="M34.459 1.375a2.999 2.999 0 0 0-4.149.884L13.5 28.17l-8.198-7.58a2.999 2.999 0 1 0-4.073 4.405l10.764 9.952s.309.266.452.359a2.999 2.999 0 0 0 4.15-.884L35.343 5.524a2.999 2.999 0 0 0-.884-4.149z"></path>
-                  </svg>
-                </li>
-
-                <li>
-                  <p><span class="pricing-card__price-span">+€50 per page - </span> After 5 Pages</p>
-                  <svg height="15" width="15" viewBox="0 0 36 36" aria-hidden="true">
-                    <path d="M34.459 1.375a2.999 2.999 0 0 0-4.149.884L13.5 28.17l-8.198-7.58a2.999 2.999 0 1 0-4.073 4.405l10.764 9.952s.309.266.452.359a2.999 2.999 0 0 0 4.15-.884L35.343 5.524a2.999 2.999 0 0 0-.884-4.149z"></path>
-                  </svg>
-                </li>
-
-                <li>
-                  <p><span class="pricing-card__price-span">+€150 once-off - </span> Blog Add-on</p>
-                  <svg height="15" width="15" viewBox="0 0 36 36" aria-hidden="true">
-                    <path d="M34.459 1.375a2.999 2.999 0 0 0-4.149.884L13.5 28.17l-8.198-7.58a2.999 2.999 0 1 0-4.073 4.405l10.764 9.952s.309.266.452.359a2.999 2.999 0 0 0 4.15-.884L35.343 5.524a2.999 2.999 0 0 0-.884-4.149z"></path>
-                  </svg>
-                </li>
-
-                <li>
-                  <p><span class="pricing-card__price-span">+€20/mo - </span> Social Media Manager</p>
-                  <svg height="15" width="15" viewBox="0 0 36 36" aria-hidden="true">
-                    <path d="M34.459 1.375a2.999 2.999 0 0 0-4.149.884L13.5 28.17l-8.198-7.58a2.999 2.999 0 1 0-4.073 4.405l10.764 9.952s.309.266.452.359a2.999 2.999 0 0 0 4.15-.884L35.343 5.524a2.999 2.999 0 0 0-.884-4.149z"></path>
-                  </svg>
-                </li>
-
-                <li>
-                  <p><span class="pricing-card__price-span">+€0.12c per word - </span> Language Translation</p>
-                  <svg height="15" width="15" viewBox="0 0 36 36" aria-hidden="true">
-                    <path d="M34.459 1.375a2.999 2.999 0 0 0-4.149.884L13.5 28.17l-8.198-7.58a2.999 2.999 0 1 0-4.073 4.405l10.764 9.952s.309.266.452.359a2.999 2.999 0 0 0 4.15-.884L35.343 5.524a2.999 2.999 0 0 0-.884-4.149z"></path>
-                  </svg>
-                </li>
-
-                <li>
-                  <p>24/7 Support</p>
-                  <svg height="15" width="15" viewBox="0 0 36 36" aria-hidden="true">
-                    <path d="M34.459 1.375a2.999 2.999 0 0 0-4.149.884L13.5 28.17l-8.198-7.58a2.999 2.999 0 1 0-4.073 4.405l10.764 9.952s.309.266.452.359a2.999 2.999 0 0 0 4.15-.884L35.343 5.524a2.999 2.999 0 0 0-.884-4.149z"></path>
-                  </svg>
-                </li>
-
-                <li>
-                  <p>Lifetime Updates</p>
-                  <svg height="15" width="15" viewBox="0 0 36 36" aria-hidden="true">
-                    <path d="M34.459 1.375a2.999 2.999 0 0 0-4.149.884L13.5 28.17l-8.198-7.58a2.999 2.999 0 1 0-4.073 4.405l10.764 9.952s.309.266.452.359a2.999 2.999 0 0 0 4.15-.884L35.343 5.524a2.999 2.999 0 0 0-.884-4.149z"></path>
-                  </svg>
-                </li>
-              </ul>
-
-              <span>€85</span>
-              <span>Per Month</span>
-              <a class="cmp-main-btn cmp-main-btn--light" href="#">Get Started</a>
-            </div>
-          </div>
-        </div>
       </section>
+
       <footer id="footer">
         <svg class="footer__svg-page-decoration" viewBox="0 0 1440 150" aria-hidden="true">
           <path d="M0,0 C300,100 600,0 900,100 C1200,200 1440,0 1440,0 L1440,150 L0,150 Z" fill="#ffffff" />
@@ -252,7 +103,7 @@
 
           <div class="footer-flex-container">
             <div class="footer__image-text-block">
-              <img src="assets/icons/company logo3.webP" alt="Business Logo" decoding="async" loading="lazy" height="120" width="310" aria-hidden="true">
+              <img src="/assets/icons/company logo3.webP" alt="Business Logo" decoding="async" loading="lazy" height="120" width="310" aria-hidden="true">
               <p>Our philosophy is that every small business deserves a website they can be proud of. No matter your size, your online presence should be built to grow with you. We are here to help make it happen!</p>
               <a class="cmp-main-btn-footer" href="#">Get Started Today</a>
             </div>
