--- a/html/pricing.html
+++ b/html/pricing.html
@@ -4,22 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="My Site">
-    <link rel="preload" as="font" type="font/woff2" crossorigin href="assets/fonts/oswald-v53-latin-regular.woff2">
-    <link rel="preload" as="font" type="font/woff2" crossorigin href="assets/fonts/oswald-v53-latin-500.woff2">
-    <link rel="preload" as="font" type="font/woff2" crossorigin href="assets/fonts/oswald-v53-latin-600.woff2">
-    <link rel="preload" as="font" type="font/woff2" crossorigin href="assets/fonts/oswald-v53-latin-700.woff2">
-    <link rel="preload" as="image" type="image/webp" href="assets/icons/company logo4.webp">
-    <link rel="preload" href="css/critical.css" as="style">
-    <link rel="stylesheet" href="css/critical.css">
-    <link rel="preload" href="css/style.css" as="style">
-    <link rel="stylesheet" href="css/style.css" media="print" onload="this.media='all'">
-    <link rel="preload" href="css/glide.css" as="style">
-    <link rel="stylesheet" href="css/glide.css" media="print" onload="this.media='all'">
-    <script type="module" src="js/glide.min.js" defer></script>
-    <script type="module" src="js/script.js" defer></script>
+    <link rel="preload" as="font" type="font/woff2" crossorigin href="/assets/fonts/oswald-v53-latin-regular.woff2">
+    <link rel="preload" as="font" type="font/woff2" crossorigin href="/assets/fonts/oswald-v53-latin-500.woff2">
+    <link rel="preload" as="font" type="font/woff2" crossorigin href="/assets/fonts/oswald-v53-latin-600.woff2">
+    <link rel="preload" as="font" type="font/woff2" crossorigin href="/assets/fonts/oswald-v53-latin-700.woff2">
+    <link rel="preload" as="image" type="image/webp" href="/assets/icons/company logo4.webp">
+    <link rel="preload" href="/css/critical.css" as="style">
+    <link rel="stylesheet" href="/css/critical.css">
+    <link rel="preload" href="/css/style.css" as="style">
+    <link rel="stylesheet" href="/css/style.css" media="print" onload="this.media='all'">
+    <link rel="preload" href="/css/glide.css" as="style">
+    <link rel="stylesheet" href="/css/glide.css" media="print" onload="this.media='all'">
+    <script type="module" src="/js/glide.min.js" defer></script>
+    <script type="module" src="/js/script.js" defer></script>
     <noscript>
-      <link rel="stylesheet" href="css/style.css">
-      <link rel="stylesheet" href="css/glide.css">
+      <link rel="stylesheet" href="/css/style.css">
+      <link rel="stylesheet" href="/css/glide.css">
     </noscript>
     <title>Algarve WebCraft | Small Business Website Specialist</title>
   </head>
@@ -29,7 +29,7 @@
 
       <div class="header__container">
         <div class="wrapper wrapper--wide wrapper--header">
-          <img src="assets/icons/company logo4.webp" class="company-logo" width="170" height="45" fetchpriority="high" decoding="async" loading="eager" alt="Algarve Webcraft's logo. Landscape scenary of beach-side cliffs on the left, with the business name on the right (Algarve Webcraft) and its slogan below it (Small business website designs.)">
+          <img src="/assets/icons/company logo4.webp" class="company-logo" width="170" height="45" fetchpriority="high" decoding="async" loading="eager" alt="Algarve Webcraft's logo. Landscape scenary of beach-side cliffs on the left, with the business name on the right (Algarve Webcraft) and its slogan below it (Small business website designs.)">
 
           <div class="toggle-hamburger-btn-box">
             <svg id="svg-sun" class="svg-color-preferance hidden" height="32" width="32" viewBox="0 0 512 512">
@@ -89,58 +89,160 @@
     </header>
 
     <main id="main">
-      <section id="pg1-s4-portfolio">
+      <section id="pg1-s5-pricing">
         <div class="wrapper wrapper--mobile-L">
+          <span class="cmp-topper-heading cmp-topper-heading--pg1-s5">Our Pricing</span>
+          <h2 class="cmp-sub-heading cmp-sub-heading--pg1-s5">Affordable Packages for Any Business</h2>
 
-          <span class="cmp-topper-heading">Our Portfolio</span>
-          <h2 class="cmp-sub-heading">Showcasing our previous work</h2>
-          <p class="cmp-main-text">Every project we take on is crafted with care, strategy, and a focus on long-term results. While we are still a growing business ourselves, we've had the opportunity to work with a few clients across Portugal, and our portfolio is steadily expanding. Here is a look at a few of our recent websites, each tailored to meet the unique needs of the businesses we serve.</p>
+          <div class="pricing-card-container">
+            <div class="pricing-card">
+              <h3>Once off</h3>
 
-          <div class="banner">
-            <div class="banner-overlay"></div>
-            <div class="slider" style="--quantity: 3">
-              <div class="item" style="--position: 1"><a href="#"><img src="assets/icons/company logo3.webp" alt="Website 1" decoding="async" loading="lazy"></a></div>
-              <div class="item" style="--position: 2"><a href="#"><img src="assets/icons/company logo3.webp" alt="Website 2" decoding="async" loading="lazy"></a></div>
-              <div class="item" style="--position: 3"><a href="#"><img src="assets/icons/company logo3.webp" alt="Website 3" decoding="async" loading="lazy"></a></div>
-            </div>
-          </div>
+              <ul role="list">
+                <li>
+                  <p><span class="pricing-card__price-span">Includes - </span>Design And Development</p>
+                  <svg height="15" width="15" viewBox="0 0 36 36" aria-hidden="true">
+                    <path d="M34.459 1.375a2.999 2.999 0 0 0-4.149.884L13.5 28.17l-8.198-7.58a2.999 2.999 0 1 0-4.073 4.405l10.764 9.952s.309.266.452.359a2.999 2.999 0 0 0 4.15-.884L35.343 5.524a2.999 2.999 0 0 0-.884-4.149z"></path>
+                  </svg>
+                </li>
 
-        </div>
-      </section>
-      
-      <section id="pg1-s6-testimonials">
-        <div class="wrapper">
-          <span class="cmp-topper-heading">Our Testimonials</span>
-          <h2 class="cmp-sub-heading cmp-sub-heading--pg1-s6">Serving Small Businesses Across the Continent</h2>
-          <p class="cmp-main-text cmp-main-text--pg1-s6">We are passionate about helping small business owners bring their vision to life online. When you work with Algarve WebCraft, you are not hiring an agency, you are gaining a dedicated partner who cares about your success. Here is what a few of our clients have shared about working with us.</p>
+                <li>
+                  <p><span class="pricing-card__price-span">+€15/mo - </span> Hosting</p>
+                  <svg height="15" width="15" viewBox="0 0 36 36" aria-hidden="true">
+                    <path d="M34.459 1.375a2.999 2.999 0 0 0-4.149.884L13.5 28.17l-8.198-7.58a2.999 2.999 0 1 0-4.073 4.405l10.764 9.952s.309.266.452.359a2.999 2.999 0 0 0 4.15-.884L35.343 5.524a2.999 2.999 0 0 0-.884-4.149z"></path>
+                  </svg>
+                </li>
 
-          <svg class="decorative-side-svg decorative-side-svg--testimonials" viewBox="0 0 512 512" aria-hidden="true">
-            <path style="fill:#001f3f;" d="M256,512c-68.38,0-132.667-26.628-181.02-74.98S0,324.38,0,256S26.628,123.333,74.98,74.98 S187.62,0,256,0s132.667,26.628,181.02,74.98S512,187.62,512,256s-26.628,132.667-74.98,181.02S324.38,512,256,512z M256,20.398 C126.089,20.398,20.398,126.089,20.398,256S126.089,491.602,256,491.602S491.602,385.911,491.602,256S385.911,20.398,256,20.398z M256,431.426c-96.73,0-175.426-78.696-175.426-175.426S159.27,80.574,256,80.574S431.426,159.27,431.426,256 S352.73,431.426,256,431.426z M256,100.972c-85.483,0-155.028,69.545-155.028,155.028S170.517,411.028,256,411.028 S411.028,341.483,411.028,256S341.483,100.972,256,100.972z"></path>
-            <path style="fill:#001f3f;" d="M256,477.323c-5.633,0-10.199-4.566-10.199-10.199c0-5.633,4.566-10.199,10.199-10.199 c38.724,0,76.315-11.037,108.706-31.915c4.736-3.052,11.047-1.687,14.098,3.047c3.052,4.734,1.688,11.047-3.046,14.098 C340.064,465.161,298.652,477.323,256,477.323z"></path>
-            <path style="fill:#001f3f;" d="M399.811,420.771c-2.733,0-5.459-1.091-7.468-3.249c-3.838-4.122-3.607-10.577,0.515-14.415 c2.223-2.069,4.421-4.21,6.535-6.363c3.947-4.02,10.404-4.079,14.424-0.134c4.02,3.946,4.08,10.403,0.134,14.424 c-2.326,2.37-4.747,4.726-7.192,7.004C404.794,419.867,402.299,420.771,399.811,420.771z"></path>
-          </svg>
+                <li>
+                  <p><span class="pricing-card__price-span">+€20/mo - </span> Unlimited Edits Add-on</p>
+                  <svg height="15" width="15" viewBox="0 0 36 36" aria-hidden="true">
+                    <path d="M34.459 1.375a2.999 2.999 0 0 0-4.149.884L13.5 28.17l-8.198-7.58a2.999 2.999 0 1 0-4.073 4.405l10.764 9.952s.309.266.452.359a2.999 2.999 0 0 0 4.15-.884L35.343 5.524a2.999 2.999 0 0 0-.884-4.149z"></path>
+                  </svg>
+                </li>
 
-          <div class="glide" aria-roledescription="carousel" aria-describedby="carousel-instructions">
-            <p id="carousel-instructions" class="visually-hidden">Select the next review by either clicking and dragging, using the arrow keys or using the tab key and pressing enter.</p>
-            <div class="glide__track" data-glide-el="track" aria-live="polite">
-              <ul class="glide__slides">
-                <li class="glide__slide" id="review1" aria-labelledby="tab1" aria-hidden="false">"This is asss ssss sssssss ss ssssss sssss sssss sssssss sss sssss ss syu first review of the business." <span>- Kevin Lortan, The Garden Bar and Grill</span></li>
-                <li class="glide__slide" id="review2" aria-labelledby="tab2" aria-hidden="true">"Another review of the company."</li>
-                <li class="glide__slide" id="review3" aria-labelledby="tab3" aria-hidden="true">"Third instance of a review for the business."</li>
-                <li class="glide__slide" id="review4" aria-labelledby="tab4" aria-hidden="true">"The final testimonial that someone will see."</li>
+                <li>
+                  <p><span class="pricing-card__price-span">+€50 per page - </span> After 5 Pages</p>
+                  <svg height="15" width="15" viewBox="0 0 36 36" aria-hidden="true">
+                    <path d="M34.459 1.375a2.999 2.999 0 0 0-4.149.884L13.5 28.17l-8.198-7.58a2.999 2.999 0 1 0-4.073 4.405l10.764 9.952s.309.266.452.359a2.999 2.999 0 0 0 4.15-.884L35.343 5.524a2.999 2.999 0 0 0-.884-4.149z"></path>
+                  </svg>
+                </li>
+
+                <li>
+                  <p><span class="pricing-card__price-span">+€150 once-off - </span> Blog Add-on</p>
+                  <svg height="15" width="15" viewBox="0 0 36 36" aria-hidden="true">
+                    <path d="M34.459 1.375a2.999 2.999 0 0 0-4.149.884L13.5 28.17l-8.198-7.58a2.999 2.999 0 1 0-4.073 4.405l10.764 9.952s.309.266.452.359a2.999 2.999 0 0 0 4.15-.884L35.343 5.524a2.999 2.999 0 0 0-.884-4.149z"></path>
+                  </svg>
+                </li>
+
+                <li>
+                  <p><span class="pricing-card__price-span">+€20/mo - </span> Social Media Manager</p>
+                  <svg height="15" width="15" viewBox="0 0 36 36" aria-hidden="true">
+                    <path d="M34.459 1.375a2.999 2.999 0 0 0-4.149.884L13.5 28.17l-8.198-7.58a2.999 2.999 0 1 0-4.073 4.405l10.764 9.952s.309.266.452.359a2.999 2.999 0 0 0 4.15-.884L35.343 5.524a2.999 2.999 0 0 0-.884-4.149z"></path>
+                  </svg>
+                </li>
+
+                <li>
+                  <p><span class="pricing-card__price-span">+€0.12c per word - </span> Language Translation</p>
+                  <svg height="15" width="15" viewBox="0 0 36 36" aria-hidden="true">
+                    <path d="M34.459 1.375a2.999 2.999 0 0 0-4.149.884L13.5 28.17l-8.198-7.58a2.999 2.999 0 1 0-4.073 4.405l10.764 9.952s.309.266.452.359a2.999 2.999 0 0 0 4.15-.884L35.343 5.524a2.999 2.999 0 0 0-.884-4.149z"></path>
+                  </svg>
+                </li>
+
+                <li>
+                  <p>24/7 Support</p>
+                  <svg height="17" width="17" viewBox="0 0 16 16" aria-hidden="true">
+                    <path fill="#707070" d="M11.477 3.11a6 6 0 0 0-8.367 8.367l8.367-8.368zm1.414 1.413l-8.368 8.368a6 6 0 0 0 8.367-8.367zM8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0z"></path>
+                  </svg>
+                </li>
+
+                <li>
+                  <p>Lifetime Updates</p>
+                  <svg height="17" width="17" viewBox="0 0 16 16" aria-hidden="true">
+                    <path fill="#707070" d="M11.477 3.11a6 6 0 0 0-8.367 8.367l8.367-8.368zm1.414 1.413l-8.368 8.368a6 6 0 0 0 8.367-8.367zM8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0z"></path>
+                  </svg>
+                </li>
               </ul>
-              <div class="glide__bullets" data-glide-el="controls[nav]" role="tablist" aria-label="Reviews navigation">
-                <button class="glide__bullet" data-glide-dir="=0" role="tab" aria-controls="review1" id="tab1" aria-selected="true"><span class="visually-hidden">Go to review 1</span></button>
-                <button class="glide__bullet" data-glide-dir="=1" role="tab" aria-controls="review2" id="tab2" aria-selected="false"><span class="visually-hidden">Go to review 2</span></button>
-                <button class="glide__bullet" data-glide-dir="=2" role="tab" aria-controls="review3" id="tab3" aria-selected="false"><span class="visually-hidden">Go to review 3</span></button>
-                <button class="glide__bullet" data-glide-dir="=3" role="tab" aria-controls="review4" id="tab4" aria-selected="false"><span class="visually-hidden">Go to review 4</span></button>
-              </div>
+
+              <span>€1100</span>
+              <span>+€15/mo Hosting</span>
+              <a class="cmp-main-btn" href="#">Get Started</a>
+            </div>
+
+            <div class="pricing-card">
+              <h3>Monthly</h3>
+
+              <ul role="list">
+                <li>
+                  <p><span class="pricing-card__price-span">Includes - </span>Design And Development</p>
+                  <svg height="15" width="15" viewBox="0 0 36 36" aria-hidden="true">
+                    <path d="M34.459 1.375a2.999 2.999 0 0 0-4.149.884L13.5 28.17l-8.198-7.58a2.999 2.999 0 1 0-4.073 4.405l10.764 9.952s.309.266.452.359a2.999 2.999 0 0 0 4.15-.884L35.343 5.524a2.999 2.999 0 0 0-.884-4.149z"></path>
+                  </svg>
+                </li>
+
+                <li>
+                  <p><span class="pricing-card__price-span">Includes - </span> Hosting</p>
+                  <svg height="15" width="15" viewBox="0 0 36 36" aria-hidden="true">
+                    <path d="M34.459 1.375a2.999 2.999 0 0 0-4.149.884L13.5 28.17l-8.198-7.58a2.999 2.999 0 1 0-4.073 4.405l10.764 9.952s.309.266.452.359a2.999 2.999 0 0 0 4.15-.884L35.343 5.524a2.999 2.999 0 0 0-.884-4.149z"></path>
+                  </svg>
+                </li>
+
+                <li>
+                  <p><span class="pricing-card__price-span">Includes - </span> Unlimited Edits</p>
+                  <svg height="15" width="15" viewBox="0 0 36 36" aria-hidden="true">
+                    <path d="M34.459 1.375a2.999 2.999 0 0 0-4.149.884L13.5 28.17l-8.198-7.58a2.999 2.999 0 1 0-4.073 4.405l10.764 9.952s.309.266.452.359a2.999 2.999 0 0 0 4.15-.884L35.343 5.524a2.999 2.999 0 0 0-.884-4.149z"></path>
+                  </svg>
+                </li>
+
+                <li>
+                  <p><span class="pricing-card__price-span">+€50 per page - </span> After 5 Pages</p>
+                  <svg height="15" width="15" viewBox="0 0 36 36" aria-hidden="true">
+                    <path d="M34.459 1.375a2.999 2.999 0 0 0-4.149.884L13.5 28.17l-8.198-7.58a2.999 2.999 0 1 0-4.073 4.405l10.764 9.952s.309.266.452.359a2.999 2.999 0 0 0 4.15-.884L35.343 5.524a2.999 2.999 0 0 0-.884-4.149z"></path>
+                  </svg>
+                </li>
+
+                <li>
+                  <p><span class="pricing-card__price-span">+€150 once-off - </span> Blog Add-on</p>
+                  <svg height="15" width="15" viewBox="0 0 36 36" aria-hidden="true">
+                    <path d="M34.459 1.375a2.999 2.999 0 0 0-4.149.884L13.5 28.17l-8.198-7.58a2.999 2.999 0 1 0-4.073 4.405l10.764 9.952s.309.266.452.359a2.999 2.999 0 0 0 4.15-.884L35.343 5.524a2.999 2.999 0 0 0-.884-4.149z"></path>
+                  </svg>
+                </li>
+
+                <li>
+                  <p><span class="pricing-card__price-span">+€20/mo - </span> Social Media Manager</p>
+                  <svg height="15" width="15" viewBox="0 0 36 36" aria-hidden="true">
+                    <path d="M34.459 1.375a2.999 2.999 0 0 0-4.149.884L13.5 28.17l-8.198-7.58a2.999 2.999 0 1 0-4.073 4.405l10.764 9.952s.309.266.452.359a2.999 2.999 0 0 0 4.15-.884L35.343 5.524a2.999 2.999 0 0 0-.884-4.149z"></path>
+                  </svg>
+                </li>
+
+                <li>
+                  <p><span class="pricing-card__price-span">+€0.12c per word - </span> Language Translation</p>
+                  <svg height="15" width="15" viewBox="0 0 36 36" aria-hidden="true">
+                    <path d="M34.459 1.375a2.999 2.999 0 0 0-4.149.884L13.5 28.17l-8.198-7.58a2.999 2.999 0 1 0-4.073 4.405l10.764 9.952s.309.266.452.359a2.999 2.999 0 0 0 4.15-.884L35.343 5.524a2.999 2.999 0 0 0-.884-4.149z"></path>
+                  </svg>
+                </li>
+
+                <li>
+                  <p>24/7 Support</p>
+                  <svg height="15" width="15" viewBox="0 0 36 36" aria-hidden="true">
+                    <path d="M34.459 1.375a2.999 2.999 0 0 0-4.149.884L13.5 28.17l-8.198-7.58a2.999 2.999 0 1 0-4.073 4.405l10.764 9.952s.309.266.452.359a2.999 2.999 0 0 0 4.15-.884L35.343 5.524a2.999 2.999 0 0 0-.884-4.149z"></path>
+                  </svg>
+                </li>
+
+                <li>
+                  <p>Lifetime Updates</p>
+                  <svg height="15" width="15" viewBox="0 0 36 36" aria-hidden="true">
+                    <path d="M34.459 1.375a2.999 2.999 0 0 0-4.149.884L13.5 28.17l-8.198-7.58a2.999 2.999 0 1 0-4.073 4.405l10.764 9.952s.309.266.452.359a2.999 2.999 0 0 0 4.15-.884L35.343 5.524a2.999 2.999 0 0 0-.884-4.149z"></path>
+                  </svg>
+                </li>
+              </ul>
+
+              <span>€85</span>
+              <span>Per Month</span>
+              <a class="cmp-main-btn cmp-main-btn--light" href="#">Get Started</a>
             </div>
           </div>
-
         </div>
       </section>
-
       <footer id="footer">
         <svg class="footer__svg-page-decoration" viewBox="0 0 1440 150" aria-hidden="true">
           <path d="M0,0 C300,100 600,0 900,100 C1200,200 1440,0 1440,0 L1440,150 L0,150 Z" fill="#ffffff" />
@@ -150,7 +252,7 @@
 
           <div class="footer-flex-container">
             <div class="footer__image-text-block">
-              <img src="assets/icons/company logo3.webP" alt="Business Logo" decoding="async" loading="lazy" height="120" width="310" aria-hidden="true">
+              <img src="/assets/icons/company logo3.webP" alt="Business Logo" decoding="async" loading="lazy" height="120" width="310" aria-hidden="true">
               <p>Our philosophy is that every small business deserves a website they can be proud of. No matter your size, your online presence should be built to grow with you. We are here to help make it happen!</p>
               <a class="cmp-main-btn-footer" href="#">Get Started Today</a>
             </div>
