--- a/html/services.html
+++ b/html/services.html
@@ -4,22 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="My Site">
-    <link rel="preload" as="font" type="font/woff2" crossorigin href="assets/fonts/oswald-v53-latin-regular.woff2">
-    <link rel="preload" as="font" type="font/woff2" crossorigin href="assets/fonts/oswald-v53-latin-500.woff2">
-    <link rel="preload" as="font" type="font/woff2" crossorigin href="assets/fonts/oswald-v53-latin-600.woff2">
-    <link rel="preload" as="font" type="font/woff2" crossorigin href="assets/fonts/oswald-v53-latin-700.woff2">
-    <link rel="preload" as="image" type="image/webp" href="assets/icons/company logo4.webp">
-    <link rel="preload" href="css/critical.css" as="style">
-    <link rel="stylesheet" href="css/critical.css">
-    <link rel="preload" href="css/style.css" as="style">
-    <link rel="stylesheet" href="css/style.css" media="print" onload="this.media='all'">
-    <link rel="preload" href="css/glide.css" as="style">
-    <link rel="stylesheet" href="css/glide.css" media="print" onload="this.media='all'">
-    <script type="module" src="js/glide.min.js" defer></script>
-    <script type="module" src="js/script.js" defer></script>
+    <link rel="preload" as="font" type="font/woff2" crossorigin href="/assets/fonts/oswald-v53-latin-regular.woff2">
+    <link rel="preload" as="font" type="font/woff2" crossorigin href="/assets/fonts/oswald-v53-latin-500.woff2">
+    <link rel="preload" as="font" type="font/woff2" crossorigin href="/assets/fonts/oswald-v53-latin-600.woff2">
+    <link rel="preload" as="font" type="font/woff2" crossorigin href="/assets/fonts/oswald-v53-latin-700.woff2">
+    <link rel="preload" as="image" type="image/webp" href="/assets/icons/company logo4.webp">
+    <link rel="preload" href="/css/critical.css" as="style">
+    <link rel="stylesheet" href="/css/critical.css">
+    <link rel="preload" href="/css/style.css" as="style">
+    <link rel="stylesheet" href="/css/style.css" media="print" onload="this.media='all'">
+    <link rel="preload" href="/css/glide.css" as="style">
+    <link rel="stylesheet" href="/css/glide.css" media="print" onload="this.media='all'">
+    <script type="module" src="/js/glide.min.js" defer></script>
+    <script type="module" src="/js/script.js" defer></script>
     <noscript>
-      <link rel="stylesheet" href="css/style.css">
-      <link rel="stylesheet" href="css/glide.css">
+      <link rel="stylesheet" href="/css/style.css">
+      <link rel="stylesheet" href="/css/glide.css">
     </noscript>
     <title>Algarve WebCraft | Small Business Website Specialist</title>
   </head>
@@ -29,7 +29,7 @@
 
       <div class="header__container">
         <div class="wrapper wrapper--wide wrapper--header">
-          <img src="assets/icons/company logo4.webp" class="company-logo" width="170" height="45" fetchpriority="high" decoding="async" loading="eager" alt="Algarve Webcraft's logo. Landscape scenary of beach-side cliffs on the left, with the business name on the right (Algarve Webcraft) and its slogan below it (Small business website designs.)">
+          <img src="/assets/icons/company logo4.webp" class="company-logo" width="170" height="45" fetchpriority="high" decoding="async" loading="eager" alt="Algarve Webcraft's logo. Landscape scenary of beach-side cliffs on the left, with the business name on the right (Algarve Webcraft) and its slogan below it (Small business website designs.)">
 
           <div class="toggle-hamburger-btn-box">
             <svg id="svg-sun" class="svg-color-preferance hidden" height="32" width="32" viewBox="0 0 512 512">
@@ -307,7 +307,7 @@
 
           <div class="footer-flex-container">
             <div class="footer__image-text-block">
-              <img src="assets/icons/company logo3.webP" alt="Business Logo" decoding="async" loading="lazy" height="120" width="310" aria-hidden="true">
+              <img src="/assets/icons/company logo3.webP" alt="Business Logo" decoding="async" loading="lazy" height="120" width="310" aria-hidden="true">
               <p>Our philosophy is that every small business deserves a website they can be proud of. No matter your size, your online presence should be built to grow with you. We are here to help make it happen!</p>
               <a class="cmp-main-btn-footer" href="#">Get Started Today</a>
             </div>
