--- a/html/index.html
+++ b/html/index.html
@@ -4,22 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="My Site">
-    <link rel="preload" as="font" type="font/woff2" crossorigin href="assets/fonts/oswald-v53-latin-regular.woff2">
-    <link rel="preload" as="font" type="font/woff2" crossorigin href="assets/fonts/oswald-v53-latin-500.woff2">
-    <link rel="preload" as="font" type="font/woff2" crossorigin href="assets/fonts/oswald-v53-latin-600.woff2">
-    <link rel="preload" as="font" type="font/woff2" crossorigin href="assets/fonts/oswald-v53-latin-700.woff2">
-    <link rel="preload" as="image" type="image/webp" href="assets/icons/company logo4.webp">
-    <link rel="preload" href="css/critical.css" as="style">
-    <link rel="stylesheet" href="css/critical.css">
-    <link rel="preload" href="css/style.css" as="style">
-    <link rel="stylesheet" href="css/style.css" media="print" onload="this.media='all'">
-    <link rel="preload" href="css/glide.css" as="style">
-    <link rel="stylesheet" href="css/glide.css" media="print" onload="this.media='all'">
-    <script type="module" src="js/glide.min.js" defer></script>
-    <script type="module" src="js/script.js" defer></script>
+    <link rel="preload" as="font" type="font/woff2" crossorigin href="/assets/fonts/oswald-v53-latin-regular.woff2">
+    <link rel="preload" as="font" type="font/woff2" crossorigin href="/assets/fonts/oswald-v53-latin-500.woff2">
+    <link rel="preload" as="font" type="font/woff2" crossorigin href="/assets/fonts/oswald-v53-latin-600.woff2">
+    <link rel="preload" as="font" type="font/woff2" crossorigin href="/assets/fonts/oswald-v53-latin-700.woff2">
+    <link rel="preload" as="image" type="image/webp" href="/assets/icons/company logo4.webp">
+    <link rel="preload" href="/css/critical.css" as="style">
+    <link rel="stylesheet" href="/css/critical.css">
+    <link rel="preload" href="/css/style.css" as="style">
+    <link rel="stylesheet" href="/css/style.css" media="print" onload="this.media='all'">
+    <link rel="preload" href="/css/glide.css" as="style">
+    <link rel="stylesheet" href="/css/glide.css" media="print" onload="this.media='all'">
+    <script type="module" src="/js/glide.min.js" defer></script>
+    <script type="module" src="/js/script.js" defer></script>
     <noscript>
-      <link rel="stylesheet" href="css/style.css">
-      <link rel="stylesheet" href="css/glide.css">
+      <link rel="stylesheet" href="/css/style.css">
+      <link rel="stylesheet" href="/css/glide.css">
     </noscript>
     <title>Algarve WebCraft | Small Business Website Specialist</title>
   </head>
@@ -29,7 +29,7 @@
 
       <div class="header__container">
         <div class="wrapper wrapper--wide wrapper--header">
-          <img src="assets/icons/company logo4.webp" class="company-logo" width="170" height="45" fetchpriority="high" decoding="async" loading="eager" alt="Algarve Webcraft's logo. Landscape scenary of beach-side cliffs on the left, with the business name on the right (Algarve Webcraft) and its slogan below it (Small business website designs.)">
+          <img src="/assets/icons/company logo4.webp" class="company-logo" width="170" height="45" fetchpriority="high" decoding="async" loading="eager" alt="Algarve Webcraft's logo. Landscape scenary of beach-side cliffs on the left, with the business name on the right (Algarve Webcraft) and its slogan below it (Small business website designs.)">
 
           <div class="toggle-hamburger-btn-box">
             <svg id="svg-sun" class="svg-color-preferance hidden" height="32" width="32" viewBox="0 0 512 512">
@@ -76,11 +76,11 @@
 
           <nav class="nav-bar">
             <ul>
-              <li><a href="index.html">Home</a></li>
+              <li><a href="index.html">Home</a></li>   
               <li><a href="about.html">About Us</a></li>
               <li><a href="services.html">Services</a></li>
               <li><a href="pricing.html">Pricing</a></li>
-              <li><a href="contact.html">Contact</a></li>
+              <li><a href="contact.html">Contact</a></li> 
             </ul>
           </nav>
 
@@ -380,9 +380,9 @@
           <div class="banner">
             <div class="banner-overlay"></div>
             <div class="slider" style="--quantity: 3">
-              <div class="item" style="--position: 1"><a href="#"><img src="assets/icons/company logo3.webp" alt="Website 1" decoding="async" loading="lazy"></a></div>
-              <div class="item" style="--position: 2"><a href="#"><img src="assets/icons/company logo3.webp" alt="Website 2" decoding="async" loading="lazy"></a></div>
-              <div class="item" style="--position: 3"><a href="#"><img src="assets/icons/company logo3.webp" alt="Website 3" decoding="async" loading="lazy"></a></div>
+              <div class="item" style="--position: 1"><a href="#"><img src="/assets/icons/company logo3.webp" alt="Website 1" decoding="async" loading="lazy"></a></div>
+              <div class="item" style="--position: 2"><a href="#"><img src="/assets/icons/company logo3.webp" alt="Website 2" decoding="async" loading="lazy"></a></div>
+              <div class="item" style="--position: 3"><a href="#"><img src="/assets/icons/company logo3.webp" alt="Website 3" decoding="async" loading="lazy"></a></div>
             </div>
           </div>
 
@@ -586,7 +586,7 @@
 
           <div class="footer-flex-container">
             <div class="footer__image-text-block">
-              <img src="assets/icons/company logo3.webP" alt="Business Logo" decoding="async" loading="lazy" height="120" width="310" aria-hidden="true">
+              <img src="/assets/icons/company logo3.webP" alt="Business Logo" decoding="async" loading="lazy" height="120" width="310" aria-hidden="true">
               <p>Our philosophy is that every small business deserves a website they can be proud of. No matter your size, your online presence should be built to grow with you. We are here to help make it happen!</p>
               <a class="cmp-main-btn-footer" href="#">Get Started Today</a>
             </div>
